# MasterMatcherVST

./: .gitignore  CMakeLists.txt  MasterMatcherAudioProcessor.cpp  MasterMatcherAudioProcessor.h  MasterMatcherAudioProcessorEditor.cpp  MasterMatcherAudioProcessorEditor.h  PluginEditor.h  PluginProcessor.h  README.md  project.jucer
python/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py  setup.py  setup_env.bat  test.py  test_audio.py  test_protocol.py
python/src/: processor.py  protocol.py  server.py
